# rex_omni_ros

./: .gitignore  README.md  mypy.ini  pixi.toml  pytest.ini
rex_omni_msgs/: CMakeLists.txt  package.xml
rex_omni_msgs/msg/: BoundingBox.msg  Detection.msg  Keypoint.msg  KeypointInstance.msg  Point2D.msg  PointDetection.msg  Polygon2D.msg  TextRegion.msg
rex_omni_msgs/srv/: Detect.srv  DetectKeypoints.srv  DetectWithVisualPrompt.srv  Point.srv  RecognizeText.srv
rex_omni_ros/: CMakeLists.txt  package.xml
rex_omni_ros/examples/: detect_client.py
rex_omni_ros/launch/: rex_omni.launch  rex_omni.launch.py
rex_omni_ros/src/rex_omni_ros/: __init__.py  compat.py  handlers.py
rex_omni_ros/src/rex_omni_ros/core/: engine.py  preprocess.py  tasks.py  types.py
rex_omni_ros/test/: conftest.py
rex_omni_ros/test/integration/: test_services_ros1.py  test_services_ros2.py  util.py
rex_omni_ros/test/unit/: test_engine.py  test_parser.py
rex_omni_ros_python/: CMakeLists.txt  package.xml  setup.py
rex_omni_ros_python/config/: rex_omni_ros1.yaml  rex_omni_ros2.yaml
rex_omni_ros_python/launch/: rex_omni.launch  rex_omni.launch.py
rex_omni_ros_python/scripts/: rex_omni_server
rex_omni_ros_python/src/rex_omni_ros/: conversions.py  node.py
rex_omni_ros_python/src/rex_omni_ros/core/: __init__.py  engine.py  mock.py  parser.py
rex_omni_ros_python/test/gpu/: test_e2e.py
rex_omni_ros_python/test/integration/: test_services_ros1.py  test_services_ros2.py  util.py
rex_omni_ros_python/test/unit/: test_engine.py  test_preprocess.py  test_tasks.py
tools/: quantize_lm_head.py  test_integration_ros1.sh  test_integration_ros2.sh
